#2 base.htmlを新規追加、編集

--- a/calc/templates/calc/index.html
+++ b/calc/templates/calc/index.html
@@ -1,1 +1,7 @@
-Hello PCBUILD_CALC WORLD!!!!!!!
+{% extends 'calc/base.html' %}
+
+{% block content %}
+
+<h1>Hello PCBUILD_CALC WORLD!!!!!!!</h1>
+
+{% endblock %}
