--- a/calc/templates/calc/description.html
+++ b/calc/templates/calc/description.html
@@ -1,13 +1,10 @@
-<html>
-<head>
-</head>
-<body>
-    <h1>このサービスについて</h1>
-    自作PCのパーツの価格を計算するのに役立つツールです。<br>
-    複数サイトでパーツを見つけても、このツールを使えば<br>
-    簡単に合計額を計算することができます。
+{% extends 'calc/base.html' %}
 
+{% block content %}
 
+<h1>このサービスについて</h1>
+自作PCのパーツの価格を計算するのに役立つツールです。<br>
+複数サイトでパーツを見つけても、このツールを使えば<br>
+簡単に合計額を計算することができます。
 
-</body>
-</html>
+{% endblock %}
