--- a/calc/templates/calc/inquiry.html
+++ b/calc/templates/calc/inquiry.html
@@ -1,12 +1,7 @@
-<html>
-<head>
-</head>
-<body>
-    <h1>お問い合わせ</h1>
-    <input type="text">
-    
+{% extends 'calc/base.html' %}
 
+{% block content %}
 
+<h1>お問い合わせ</h1>
 
-</body>
-</html>
+{% endblock %}
