--- a/calc/templates/calc/description.html
+++ b/calc/templates/calc/description.html
@@ -2,9 +2,18 @@
 
 {% block content %}
 
-<h1>このサービスについて</h1>
-自作PCのパーツの価格を計算するのに役立つツールです。<br>
-複数サイトでパーツを見つけても、このツールを使えば<br>
-簡単に合計額を計算することができます。
+<div class="description_section">
+    <h1>このサービスについて</h1>
+    <p>ECサイトなどで自作PCのパーツを検索し、それらの合計を電卓で計算しようとしたことはありませんか？</p>
+    <p>その際に途中で、「あれ？あとどのパーツを足していないんだっけ？」と思ったことはありませんか？</p>
+    <p>そんな時にはこのツールが役に立ちます。</p>
+    <p>このツールを使えば、計算し忘れるといったことが無くなります。</p>
+</div>
+
+<div class="description_section">
+    <h1>よりよい使い方のTips</h1>
+    <p>PCの場合、このページを画面の半分に表示し</p>
+    <p>もう半分でパーツ探しをすると、より快適にお使いいただけます</p>
+</div>
 
 {% endblock %}
