--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<!DOCTYPE html>
 <html>
 <head>
     <title>PCBUILD_CALC</title>
@@ -23,7 +24,7 @@
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                   <li><a class="dropdown-item" href="{% url 'calc:index' %}">計算ツール</a></li>
                   <li><a class="dropdown-item" href="{% url 'calc:description' %}">このサービスについて</a></li>
-                  <li><a class="dropdown-item" href="#">お問い合わせフォーム</a></li>
+                  <li><a class="dropdown-item" href="{% url 'calc:inquiry' %}">お問い合わせフォーム</a></li>
                 </ul>
               </li>
             </ul>
@@ -38,7 +39,7 @@
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="{% url 'calc:index' %}" class="nav-link px-2 text-muted">計算ツール</a></li>
             <li class="nav-item"><a href="{% url 'calc:description' %}" class="nav-link px-2 text-muted">このサービスについて</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">お問い合わせフォーム</a></li>
+            <li class="nav-item"><a href="{% url 'calc:inquiry' %}" class="nav-link px-2 text-muted">お問い合わせフォーム</a></li>
           </ul>
           <p class="text-center text-muted">&copy; 2021 PCBUILD_CALC</p>
         </footer>
