--- a/calc/templates/calc/description.html
+++ b/calc/templates/calc/description.html
@@ -3,17 +3,19 @@
 {% block content %}
 
 <div class="description_section">
-    <h1>このサービスについて</h1>
-    <p>ECサイトなどで自作PCのパーツを検索し、それらの合計を電卓で計算しようとしたことはありませんか？</p>
-    <p>その際に途中で、「あれ？あとどのパーツを足していないんだっけ？」と思ったことはありませんか？</p>
+    <p><h1>このサービスについて</h1></p>
+    <p>複数のECサイトなどで自作PCのパーツを検索し、</p>
+    <p>それらの合計を電卓で計算しようとしたことはありませんか？</p>
+    <p>その際に途中で、「あれ？あとどのパーツを足していないんだっけ？」と</p>
+    <p>思ったことはありませんか？</p>
     <p>そんな時にはこのツールが役に立ちます。</p>
     <p>このツールを使えば、計算し忘れるといったことが無くなります。</p>
 </div>
 
 <div class="description_section">
-    <h1>よりよい使い方のTips</h1>
+    <p><h1>よりよい使い方のTips</h1></p>
     <p>PCの場合、このページを画面の半分に表示し</p>
-    <p>もう半分でパーツ探しをすると、より快適にお使いいただけます</p>
+    <p>もう半分の画面でパーツ探しをすると、より快適にお使いいただけます</p>
 </div>
 
 {% endblock %}
