#6 全てのページの背景色を変更

--- a/calc/templates/calc/inquiry.html
+++ b/calc/templates/calc/inquiry.html
@@ -10,7 +10,7 @@
         {{ form.non_field_errors }}
 
         {% for field in form %}
-            <div>
+            <div class="inquiry_form">
                 <label for="{{ field.id_for_label }}">
                     {{ field.label_tag }}
                 </label>
