--- a/calc/static/css/mystyle.css
+++ b/calc/static/css/mystyle.css
@@ -36,3 +36,8 @@ input[type="number"]::-webkit-inner-spin-button {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.inquiry_form {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
