--- a/calc/templates/calc/index.html
+++ b/calc/templates/calc/index.html
@@ -63,6 +63,7 @@
     </div>
 </div>
 
+<!--タイトル下の計算機アイコンの出典元-->
 <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from 
 <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
