Debug Commit Heroku

--- a/calc/templates/calc/index.html
+++ b/calc/templates/calc/index.html
@@ -6,7 +6,7 @@
 
 <div class="index_section">
     <p><h1>PCBUILD_CALC</h1></p>
-    <img src="{% static 'img/calculator.png'%}">
+    <img src="{% staticfiles 'img/calculator.png'%}">
     <div class="index_section">
         <p>PCパーツの価格を計算できます。</p>
         <p>合計額はリアルタイムで更新されます。</p>
