--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -1,10 +1,10 @@
-{% load static %}
+{% load staticfiles %}
 
 <!DOCTYPE html>
 <html>
 <head>
     <title>PCBUILD_CALC</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/mystyle.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% staticfiles 'css/mystyle.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
@@ -52,6 +52,6 @@
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'js/calculate.js' %}"></script>
+    <script type="text/javascript" src="{% staticfiles 'js/calculate.js' %}"></script>
 </body>
 </html>
