--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <title>PCBUILD_CALC</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=480, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/mystyle.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
