--- a/calc/templates/calc/description.html
+++ b/calc/templates/calc/description.html
@@ -15,7 +15,7 @@
 <div class="description_section">
     <p><h1>よりよい使い方のTips</h1></p>
     <p>PCの場合、このページを画面の半分に表示し</p>
-    <p>もう半分の画面でパーツ探しをすると、より快適にお使いいただけます</p>
+    <p>もう半分の画面でパーツ探しをすると、より快適にお使いいただけます。</p>
 </div>
 
 {% endblock %}
