--- a/staticfiles/css/mystyle.css
+++ b/staticfiles/css/mystyle.css
@@ -23,11 +23,6 @@ table {
     margin-bottom: 5rem;
 }
 
-.inquiry_input_section {
-    margin-left: 2rem;
-    margin-right: 2rem;
-}
-
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -47,4 +42,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .inquiry_form {
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+
+.price {
+    width: 80px;
 }
