changed inquiry form size commit

--- a/calc/templates/calc/inquiry.html
+++ b/calc/templates/calc/inquiry.html
@@ -4,7 +4,8 @@
 
 <div class="inquiry_section">
     <p><h1>お問い合わせ</h1></p>
-    <p>ご意見、ご感想、バグ報告など、お待ちしております。</p>
+    <p>ご意見、ご感想、バグ報告など、</p>
+    <p>お待ちしております。</p>
     <form method="post">
         {% csrf_token %}
         {{ form.non_field_errors }}
