--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -34,6 +34,22 @@
         </div>
     </nav>
 
+    {% if messages %}
+      <div class="container">
+        <div class="row">
+          <div class="messages_style w-100">
+            <ul class="messages" style="list-style: none;">
+              {% for message in messages %}
+              <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
+                {{ message }}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+    {% endif %}
+
     {% block content %}{% endblock %}
 
     <!--フッター-->
