--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -37,7 +37,7 @@
     {% if messages %}
       <div class="container">
         <div class="row">
-          <div class="messages_style w-auto">
+          <div class="messages_style w-75">
             <ul class="messages" style="list-style: none;">
               {% for message in messages %}
               <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
