--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -35,14 +35,16 @@
     </nav>
 
     {% if messages %}
-      <div class="messages_style w-100">
-        <ul class="messages" style="list-style: none;">
-          {% for message in messages %}
-          <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-            {{ message }}
-          </li>
-          {% endfor %}
-        </ul>
+      <div class="row">
+        <div class="messages_style w-100">
+          <ul class="messages" style="list-style: none;">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
+              {{ message }}
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
       </div>
     {% endif %}
 
