--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -37,7 +37,7 @@
     {% if messages %}
       <div class="container">
         <div class="row">
-          <div class="col-md-10 col-md-offset-1 messages_style">
+          <div class="messages_style w-100">
             <ul class="messages" style="list-style: none;">
               {% for message in messages %}
               <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
