changed success message text-align commit

--- a/calc/templates/calc/base.html
+++ b/calc/templates/calc/base.html
@@ -36,7 +36,7 @@
 
     {% if messages %}
       <div class="container">
-        <div class="row" style="margin-left: 0; margin-right: 0;">
+        <div class="row">
           <div class="messages_style w-100">
             <ul class="messages" style="list-style: none;">
               {% for message in messages %}
