--- a/calc/templates/calc/index.html
+++ b/calc/templates/calc/index.html
@@ -20,35 +20,35 @@
         </thead>
         <tbody>
             <tr>
-                <td>グラフィックボード:</td>
+                <td>グラフィックボード：</td>
                 <td><input type="number" class="price" id="graphic_board">円</td>
             </tr>
             <tr>
-                <td>内蔵ドライブ:</td>
+                <td>内蔵ドライブ：</td>
                 <td><input type="number" class="price" id="drive">円</td>
             </tr>
             <tr>
-                <td>マザーボード:</td>
+                <td>マザーボード：</td>
                 <td><input type="number" class="price" id="mother_board">円</td>
             </tr>
             <tr>
-                <td>冷却機器:</td>
+                <td>冷却機器：</td>
                 <td><input type="number" class="price" id="cooler">円</td>
             </tr>
             <tr>
-                <td>PCケース:</td>
+                <td>PCケース：</td>
                 <td><input type="number" class="price" id="case">円</td>
             </tr>
             <tr>
-                <td>メモリ:</td>
+                <td>メモリ：</td>
                 <td><input type="number" class="price" id="memory">円</td>
             </tr>
             <tr>
-                <td>電源:</td>
+                <td>電源：</td>
                 <td><input type="number" class="price" id="power">円</td>
             </tr>
             <tr>
-                <td>OS:</td>
+                <td>OS：</td>
                 <td><input type="number" class="price" id="os">円</td>
             </tr>
         </tbody>
