--- a/staticfiles/css/mystyle.css
+++ b/staticfiles/css/mystyle.css
@@ -32,6 +32,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .pcparts_table {
     border-collapse: separate;
     border-spacing: 2rem 1rem;
+    text-align: right;
 }
 
 .calc_buttons {
